--- a/assets/CSS/report.css
+++ b/assets/CSS/report.css
@@ -155,9 +155,10 @@ body {
 #generate-report:hover {
   background-color: #f34668;
 }
+
 /* template1   */
 .template-one {
-  height: 90vw;
+  height: auto;
   background: #fcfcfd;
   width: 800px;
   border-radius: 8px;
@@ -165,7 +166,7 @@ body {
   position: absolute;
   top: 60px;
   left: 60px;
-  /* padding: 20px; */
+  box-sizing: border-box;
   color: white;
   display: flex;
   flex-direction: column;
@@ -173,54 +174,6 @@ body {
   margin-left: 300px;
   font-family: verdana;
   border: solid 1px #4d4d4d;
-}
-.whole-batch {
-  border: solid black 1px;
-  border-radius: 10px;
-  background: white;
-  height: 150px;
-  width: 95%;
-  margin: auto;
-  top: 10px;
-}
-.number-numLearners {
-  border: solid black 1px;
-  border-radius: 10px;
-  background: white;
-  height: 150px;
-  width: 95%;
-  margin: auto;
-  top: 10px;
-}
-.duration {
-  border: solid black 1px;
-  border-radius: 10px;
-  background: white;
-  height: 150px;
-  width: 95%;
-  margin: auto;
-  top: 10px;
-}
-.sessions {
-  border: solid black 1px;
-  border-radius: 10px;
-  background: white;
-  height: 150px;
-  width: 95%;
-  margin: auto;
-  top: 10px;
-}
-
-
-.container-template1 {
-  max-width: 800px;
-  font-family: "Montserrat", sans-serif;
-  margin: auto;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  position: relative;
-  font-family: verdana;
 }
 
 .header-template1 {
@@ -235,11 +188,11 @@ body {
 }
 .header-template1 h1 {
   color: black;
-  padding-right: 30px;
+  padding-right: 35px;
   padding-top: 30px;
 }
 .left-template1 {
-  height: 90vw;
+  height: auto;
   background: #bda7ec;
   width: 45vh;
   border-radius: 8px;
@@ -315,8 +268,447 @@ body {
   position: relative;
   top: 10px;
 }
+
+.session-template1 {
+  border-radius: 10px;
+  width: 180px;
+  height: 20px;
+  padding: auto;
+  background: #8061c3;
+  color: white;
+  position: absolute;
+  z-index: 2;
+  margin-left: 35px;
+}
+
+.session-template1 p {
+  text-align: center;
+  margin-top: -1px;
+}
+
+.inner-session-template1 {
+  border: solid black 1px;
+  border-radius: 10px;
+  background: white;
+  height: 150px;
+  width: 95%;
+  margin: auto;
+  position: relative;
+  top: 10px;
+}
+
+.level-heading {
+  border-radius: 10px;
+  width: 180px;
+  height: 20px;
+  padding: auto;
+  background: #8061c3;
+  color: white;
+  position: absolute;
+  z-index: 2;
+  margin-left: 35px;
+}
+
+.level-heading p {
+  text-align: center;
+  margin-top: -1px;
+}
+
+.inner-level-template1 {
+  border: solid black 1px;
+  border-radius: 10px;
+  background: white;
+  height: 150px;
+  width: 95%;
+  margin: auto;
+  position: relative;
+  top: 10px;
+}
 .main-container {
   display: flex;
   justify-content: space-between;
 }
-/* Additional styles can go here */
+.right-template1{
+
+  width: 55vh;
+  margin-left: 390px;
+  margin-top: 20px;
+  padding: 0;
+}
+.attendance-template1{
+  width: 100%;
+margin-top: 30px;
+  
+}
+.attendance-heading-template1{
+  border-radius: 10px;
+  width: 200px;
+  height: 25px;
+  padding: auto;
+  background: #8061c3;
+  color: white;
+  position: absolute;
+  z-index: 2;
+  margin-left: 70px;
+
+}
+.attendance-heading-template1 p {
+  text-align: center;
+  margin-top: -1px;
+}
+
+.attendance-body-template1{
+  border: solid black 1px;
+  border-radius: 10px;
+  background: white;
+  height: 250px;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  top: 10px;
+}
+
+.evaluation-template1{
+  width: 100%;
+  margin-top: 35px;
+  margin-top: 30px;
+
+  
+}
+.evaluation-heading-template1{
+  border-radius: 10px;
+  width: 200px;
+  height: 25px;
+  padding: auto;
+  background: #8061c3;
+  color: white;
+  position: absolute;
+  z-index: 2;
+  margin-left: 70px;
+}
+.evaluation-heading-template1 p {
+  text-align: center;
+  margin-top: -1px;
+}
+
+.evaluation-body-template1{
+  border: solid black 1px;
+  border-radius: 10px;
+  background: white;
+  height: 300px;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  top: 10px;
+}
+
+.duration-sessions-template1{
+  width: 100%;
+  margin-top: 10px;
+
+  
+}
+.duration-sessions-heading-template1{
+  border-radius: 10px;
+  width: 200px;
+  height: 25px;
+  padding: auto;
+  background: #8061c3;
+  color: white;
+  position: absolute;
+  z-index: 2;
+  margin-left: 70px;
+}
+.duration-sessions-heading-template1 p {
+  text-align: center;
+  margin-top: -1px;
+}
+
+.duration-sessions-body-template1{
+  border: solid black 1px;
+  border-radius: 10px;
+  background: white;
+  height: 150px;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  top: 10px;
+}
+
+.batch-duration-template1{
+  width: 100%;
+  margin-top: 5px;
+
+  
+}
+.duration-heading-template1{
+  border-radius: 10px;
+  width: 200px;
+  height: 25px;
+  padding: auto;
+  background: #8061c3;
+  color: white;
+  position: absolute;
+  z-index: 2;
+  margin-left:23px;
+}
+.evaluation-heading-template1 p {
+  text-align: center;
+  margin-top: -1px;
+}
+
+.duration-body-template1{
+  border: solid black 1px;
+  border-radius: 10px;
+  background: white;
+  height: 150px;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  top: 10px;
+}
+
+/* template 4 */
+
+
+.template-four{
+  width : 100%;
+  border: 2px solid brown;
+  height: auto;
+  padding: 10px;
+
+}
+.t4top{
+  height:auto;
+  display: flex;
+  
+}
+.t4month{
+  width: 20%;
+  height: 100px;
+  background-color: #DEA49C;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: large;
+  color: white;
+
+}
+.t4heading{
+  width: 80%;
+  height: 100px;
+  font-size: x-large;
+  color: #0E486B;
+  padding-left: 40px;
+  padding-top: 10px;
+  
+}
+
+.t4body{
+  border: 1px solid black;
+  margin-top: 5px;
+  height: 450px;
+  background-color: #0E486B;
+  display: flex;
+
+}
+.t4leftbody{
+  width: 40%;
+  padding-left: 5px;
+
+}
+.t4batch{
+  color: white;
+  font-size: large;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.t4trainee{
+  display: flex;
+  flex-wrap: wrap;
+
+}
+.traineedetails{
+  width:130px;
+  height: 120px;
+  background-color: #ffffff;
+  margin: 2px;
+  border-radius: 15px;
+  box-shadow: 1px 1px;
+}
+.t4rightbody{
+  width: 65%;
+
+}
+.graph{
+  background-color: white;
+  height: 300px;
+  width: 98%;
+  margin-top:50px ;
+}
+.t4tablediv{
+  display: flex;
+  height: 400px;
+  background-color: #DEA49C;
+  margin-top:5px;
+}
+.t4tableleftdiv{
+  width: 20%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+
+
+}
+
+.t4tablerightdiv{
+  width: 80%;
+
+}
+.t4table{
+  width: 95%;
+  height: 90%;
+  margin: 15px;
+  background-color: white;
+}
+
+/* template 2 */
+
+
+.full{
+  font-family: Arial, sans-serif;
+  background-color: #ffffff;
+  width: 70%;
+  margin: auto;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+.container-template2 {
+  width: 100%;
+  margin: auto;
+  padding: 20px;
+  background-color: #c1f0c0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* margin-top: 20px; */
+}
+
+.header-template2 {
+  text-align: center;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  height: 70px;
+}
+
+.header h1 {
+  margin: 0;
+  font-size: 2em;
+  color: #0b2b69;
+}
+
+.header h2 {
+  margin: 0;
+  color: #0b2b69;
+}
+
+.summary {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+.box {
+  background-color: #ffffff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 20px;
+  width: 120px;
+  /* margin-left: 50px;
+  margin-top: 10px; */
+  margin: auto;
+  height: 80px;
+}
+
+.box h3 {
+  margin-bottom: 10px;
+  font-size: 1.2em;
+}
+
+.box .number {
+  font-size: 2.5em;
+  font-weight: bold;
+  color: #333;
+}
+
+.box .trainer {
+  font-size: 2em;
+  font-weight: bold;
+  color: #333;
+}
+
+.batch-info {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+height: 40px;
+font-size: 20px;
+color: #0b2b69;
+}
+
+.batch-info p{
+align-self: flex-end;
+margin-top: -90px;
+padding: 40px;
+font-size: 20px;
+}
+
+.details {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 10px;
+  margin-top: 20px;
+}
+
+.trainee-list table {
+  width: 100%;
+  height: 270px;
+  border-collapse: collapse;
+  background-color: #fefbb9;
+}
+
+/* .trainee-list th, .trainee-list td {
+  padding: 10px;
+  text-align: center;
+  border: 1px solid #ccc;
+}
+.trainee-list th{
+  background-color: #fefbb9;
+  height: 60px;
+} */
+
+.attendance, .evaluation {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  background-color: #fefbb9
+}
+
+h4 {
+  margin-top: 0;
+  text-align: center;
+  color: #0b2b69;
+}
+
+canvas {
+  width: 100%;
+  height: 200px;
+}
